--- a/clockie.html
+++ b/clockie.html
@@ -26,7 +26,7 @@
 				positionInit		: 'right',
 				hasActionBtn		: true,
 				isDraggable			: true,
-				actionBtnTxt		: 'Affecter',
+				actionBtnTxt		: 'Assign',
 				timerColor			: '#0066cc',
 				launchAction: function(data){
 					myClockie.clearPauseTimer();
